--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@yetnt/progressbar": "^2.2.0",
         "discord.js": "^14.13.0",
         "dotenv": "^16.3.1",
         "ic4d": "^1.2.1",
