--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "@yetnt/progressbar": "^2.2.0",
-        "discord.js": "^14.13.0",
-        "dotenv": "^16.3.1",
-        "ic4d": "^2.2.0",
+        "@yetnt/progressbar": "^3.0.1",
+        "discord.js": "^14.15.3",
+        "dotenv": "^16.4.5",
+        "ic4d": "^2.5.0-alpha.3",
         "path": "^0.12.7"
     }
 }
